tests/error/inout_errors/shadow.err
Error: Borrow shadowed (at $FILE:12:4)
   | 
10 | @guppy(module)
11 | def test(q: qubit) -> None:
12 |     q = qubit()
   |     ^ Assignment shadows borrowed argument `q`

Help: Consider assigning to a different name

Guppy compilation failed due to 1 previous error
